--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 <h3><span class="span_red">//</span>contact form</h3>
                 <form>
                     <div class="input-group">
-                        <label for="name"> Name</label>
+                        <label for="name"> Name.</label>
                         <input type="text" id="name" name="name" required>
                     </div>
                     
