--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -82,7 +82,7 @@
 
                      <!-- Card 3 -->
                     <div class="card card1">
-                        <div class="card-img"></div>
+                        <div class="card-img img-fake"></div>
                         <div class=" card-content">
                             <h2> My Portfolio </h2>
                              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
