inserimento descrizione progetto copywriting

--- a/portfolio/s2i-copywriting.html
+++ b/portfolio/s2i-copywriting.html
@@ -62,10 +62,18 @@
                         <h4 ><span class="span_red">//</span> About the Project</h4>
                         <br>
                         <h2>Copywriting Project</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Placeat, soluta et atque consequuntur corrupti perferendis, 
-                        unde necessitatibus reprehenderit libero laborum dolore eum quidem 
-                        dolorem doloribus molestiae, molestias maxime? Doloribus, voluptas.
+                        <p>
+                            My project focuses on creating a persuasive blog post in Italian to 
+                            promote an app dedicated to buying and exchanging used clothes.
+                             Through the effective use of Cialdini's persuasion principles 
+                             and careful structuring of content, I developed an engaging article
+                              that utilizes power words, spacing, and thoughtful formatting. 
+                              The entire process was managed using Google Document, integrating 
+                              in-depth research conducted through SEMrush and citing sources to 
+                              ensure reliability and authenticity in the message. The blog post 
+                              aims to capture the attention of the target audience, increase awareness 
+                              of the app, and promote concrete actions, contributing to the overall success 
+                              of the marketing campaign.
                         </p>
                     </div>
 
