--- a/portfolio/s2i-copywriting.html
+++ b/portfolio/s2i-copywriting.html
@@ -67,7 +67,7 @@
                             promote an app dedicated to buying and exchanging used clothes.
                              Through the effective use of Cialdini's persuasion principles 
                              and careful structuring of content, I developed an engaging article
-                              that utilizes power words, spacing, and thoughtful formatting. 
+                              that utilizes power words, spacing, and thoughtful formatting. <br><br>
                               The entire process was managed using Google Document, integrating 
                               in-depth research conducted through SEMrush and citing sources to 
                               ensure reliability and authenticity in the message. The blog post 
