modifica del box info della pagina progetto
aggiunta titoli,skill badge, spaziature e colori nel box info

--- a/portfolio/s2i-copywriting.html
+++ b/portfolio/s2i-copywriting.html
@@ -78,17 +78,18 @@
                     </div>
 
                     <div class="stack-box">
-                        <h4>skill box</h4>
-                        <p>ciao</p>
+                        <h4>Date</h4>
+                        <p>00/00/2023</p>
                         <br>
-                        <h4>time</h4>
-                        <p>ciao dinuovo </p>
+                        <h4>Time</h4>
+                        <p>3 weeks </p>
                         <br>
-                        <h4>abbiamo sforato?</h4>
-                        <p>probabilmente si</p>
+                        <h4>Tool</h4>
+                        <div class="tool-proj skl-item-2"><p>Canva</p> <p>Google Doc</p></div>
                         <br>
-                        <h4>e invece no</h4>
-                        <p>metti qui le skill</p>
+                        <h4>Skills</h4>
+                        <div class="tool-proj skl-item-2"><p>Copywriting</p></div>
+                        
 
                     </div>
 
