aggiunta descrizione lavoro al cv

--- a/about.html
+++ b/about.html
@@ -102,21 +102,35 @@
                     <h2><span class="span_red">//</span> Work Experiences</h2>
 
 
-                    <div style="margin: 50px auto;">
+                    <!-- <div style="margin: 50px auto;">
                         <h3 class="span_lime">Deliveroo</h3>
                         <h4>Rider</h4>
                         <p>Since 2021 - Present</p>
                         <br>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur repellendus dicta modi natus, voluptatum cumque molestias assumenda architecto eius accusantium ipsum non minus quaerat asperiores sunt itaque. Molestiae, impedit ipsum!</p>
-                    </div>
+                    </div> -->
 
                     <div style="margin: 40px auto;">
-                        <h3 class="span_lime">Glovo</h3>
+                        <h3 class="span_lime">Glovo & Deliveroo</h3>
                         <h4> Rider </h4>
                         <p>Since 2021 - Present</p>
                         <br>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur repellendus dicta modi natus, voluptatum cumque molestias assumenda architecto eius accusantium ipsum non minus quaerat asperiores sunt itaque. Molestiae, impedit ipsum!</p>
-                    </div>
+                        <p>
+                            
+                            During my time with Glovo and Deliveroo, I had the privilege of working as a Rider. Throughout this period, I endeavored to maintain a consistent and dedicated approach to my work. 
+                            <br><br>
+                            In the course of this experience, I had the opportunity to develop several skills, including:
+                            </p>
+                            <br>
+                            
+                             <ul>
+                             <li>Customer Care: I aimed to provide attentive and professional service, always prioritizing the needs of the customers.</li>
+                             <br>
+                            <li>Communication: I sought to collaborate openly with other teams within the company, always striving to facilitate clear and respectful communication.</li>
+                            <br>
+                            <li>Problem Solving: I tackled daily challenges with a problem-solving approach, aiming to maintain a high standard of service even in complex. </li> 
+                            </ul>
+                        </div>
 
                     <p><span class="span_red">Disclaimer</span> : Here you can find only last experiences.
                        If you want to see my all experiences <a href="#contact"> Contact Me</a>
