aggiunta pagina progetto html/css e inserito link nelle varie cards

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -75,7 +75,7 @@
                            <h2> My Portfolio </h2>
                             <p>I created my portfolio using HTML, CSS, and Git.</p>
                           
-                            <a href="./portfolio"><button class="btn-one btn-portfolio">Explore</button></a>
+                            <a href="./s21-htmlcss.html"><button class="btn-one btn-portfolio">Explore</button></a>
                         </div>
                     </div>
 
