correzione descrizione progetto porfolio

--- a/portfolio/s21-htmlcss.html
+++ b/portfolio/s21-htmlcss.html
@@ -68,12 +68,12 @@
                         <br>
                         <h2>Portfolio Project</h2>
                         <p>
-                            I developed my portfolio website by maximizing the use of graphic tools like Canva and Figma to create a captivating and professional design. 
+                            I developed my portfolio website by making the most of graphics tools like Canva and Figma to create an attractive and professional design.
                             <br><br>
                             To ensure an optimal user experience across different devices, I implemented a 100% responsive design using HTML and CSS.
                             <br>
                             <br>
-                             Among the techniques employed to make the site adaptable to various screen sizes, I utilized the 'clamp' function 
+                             Among the techniques employed to make the site adaptable to various screen sizes, I used the 'clamp' function 
                              to dynamically manage font sizes and media queries to adjust the layout based on device characteristics.
                         </p>
                     </div>
