modicifato il footer
aggiunta firma di copyright

--- a/portfolio/s21-htmlcss.html
+++ b/portfolio/s21-htmlcss.html
@@ -126,7 +126,7 @@
                 </div>
                 
                 <div class="cnt-btn">
-                    <a href="./contact.html"><button class="btn-one  btn-contact">Email Me</button></a> 
+                    <a href="../contact.html"><button class="btn-one  btn-contact">Email Me</button></a> 
                     <a href="https://www.linkedin.com/in/mario-romagnoli-50626a163/" target=”_blank”><button class="btn-two btn-contact"> Linkedin</button></a> 
                 </div>
 
@@ -142,12 +142,19 @@
 
 <!-- Footer -->
 <footer>
+
     <div class="social">
+
         <h4>follow me on </h4>
-        <a class="social-svg" href="https://www.instagram.com/" target=”_blank”><img src="../assets/image/Instagram.svg" alt="Instagram"></a>
-        <a class="social-svg" href="https://github.com/" target=”_blank”><img src="../assets/image/ithub.svg" alt="github"></a>
-        <a class="social-svg" href="https://linkedin.com" target=”_blank”><img src="../assets/image/Linkedin.svg" alt="Linkedin"></a>
+
+        <a class="social-svg" href="https://www.instagram.com/" target=”_blank”><img src="./assets/image/Instagram.svg" alt="Instagram"></a>
+        <a class="social-svg" href="https://github.com/" target=”_blank”><img src="./assets/image/ithub.svg" alt="github"></a>
+        <a class="social-svg" href="https://linkedin.com" target=”_blank”><img src="./assets/image/Linkedin.svg" alt="Linkedin"></a>
+   
     </div>
+
+    <p>© 2023 Mario Romagnoli. All Right reserved</p>
+
 </footer>
     
 </body>
