correzione path social footer

--- a/portfolio/s21-htmlcss.html
+++ b/portfolio/s21-htmlcss.html
@@ -147,9 +147,9 @@
 
         <h4>follow me on </h4>
 
-        <a class="social-svg" href="https://www.instagram.com/" target=”_blank”><img src="./assets/image/Instagram.svg" alt="Instagram"></a>
-        <a class="social-svg" href="https://github.com/" target=”_blank”><img src="./assets/image/ithub.svg" alt="github"></a>
-        <a class="social-svg" href="https://linkedin.com" target=”_blank”><img src="./assets/image/Linkedin.svg" alt="Linkedin"></a>
+        <a class="social-svg" href="https://www.instagram.com/" target=”_blank”><img src="../assets/image/Instagram.svg" alt="Instagram"></a>
+        <a class="social-svg" href="https://github.com/" target=”_blank”><img src="../assets/image/ithub.svg" alt="github"></a>
+        <a class="social-svg" href="https://linkedin.com" target=”_blank”><img src="../assets/image/Linkedin.svg" alt="Linkedin"></a>
    
     </div>
 
