--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul class="menu">
              <li><a href="#home">Home</a></li>
              <li><a href="#about">About</a></li>
-             <li><a href="#portfolio">Projects</a></li>
+             <li><a href="./portfolio">Projects</a></li>
              <li><a href="#contact">Contact</a></li>
            
             </ul>
