--- a/portfolio/s21-htmlcss.html
+++ b/portfolio/s21-htmlcss.html
@@ -41,7 +41,7 @@
     <main>
 
 
-        <section class="head-project container bg-copy" id="head">
+        <section class="head-project container bg-html" id="head">
             
             <div class="text">
 
