--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
    <!-- OG tags -->
    <meta property="og:title" content="Mario Romagnoli - Front-End Developer">
    <meta property="og:description" content="Explore my portfolio of front-end projects. I'm ready to turn your ideas into extraordinary web experiences.">
-   <meta property="og:image" content="URL  image ">
+   <meta property="og:image:width" content="1200" />
+   <meta property="og:image:height" content="630" />
+   <meta property="og:image" content="./assets/image/OG_graph_Image.png">
    <meta property="og:url" content="URL  portfolio">
    <meta property="og:type" content="website">
    <meta property="og:locale" content="en_US">
