--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <meta property="og:image:width" content="1200" />
    <meta property="og:image:height" content="630" />
    <meta property="og:image" content="./assets/image/OG_graph_Image.png">
-   <meta property="og:url" content="URL  portfolio">
+   <meta property="og:url" content="https://skelman016.github.io/my_portfolio/">
    <meta property="og:type" content="website">
    <meta property="og:locale" content="en_US">
 
