add thanks page

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                     <input type="hidden" name="_captcha" value="false">
                     
                     <!--SUCCESS PAGE-->
-                    <input type="hidden" name="_next" value="">
+                    <input type="hidden" name="_next" value="./end_page.html">
                     
 
                     <div class="input-group">
