--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                     <input type="hidden" name="_captcha" value="false">
                     
                     <!--SUCCESS PAGE-->
-                    <input type="hidden" name="_next" value="https://skelman016.github.io/my_portfolio/end_page.html">
+                    <input type="hidden" name="_next" value="https://skelman016.github.io/end_page.html">
                     
 
                     <div class="input-group">
