--- a/about.html
+++ b/about.html
@@ -81,9 +81,9 @@
                         <br>
                         
                         <div>
-                            <a class="social-svg social-cv" href="https://www.instagram.com/" target=”_blank”><img src="../assets/image/Instagram.svg" alt="Instagram"></a>
-                            <a class="social-svg social-cv" href="https://github.com/" target=”_blank”><img src="../assets/image/ithub.svg" alt="github"></a>
-                            <a class="social-svg social-cv" href="https://linkedin.com" target=”_blank”><img src="../assets/image/Linkedin.svg" alt="Linkedin"></a>
+                            <a class="social-svg social-cv" href="https://www.instagram.com/0_its_me_mario_0/" target=”_blank”><img src="../assets/image/Instagram.svg" alt="Instagram"></a>
+                            <a class="social-svg social-cv" href="https://github.com/Skelman016" target=”_blank”><img src="../assets/image/ithub.svg" alt="github"></a>
+                            <a class="social-svg social-cv" href="https://www.linkedin.com/in/mario-romagnoli-50626a163/" target=”_blank”><img src="../assets/image/Linkedin.svg" alt="Linkedin"></a>
                             <a class="social-svg social-cv" href="https://t.me/Skelman016" target=”_blank”><img src="../assets/image/Telegram.svg" alt="Telegram"></a>
                             <a class="social-svg social-cv" href="./contact.html" target=”_blank”><img src="../assets/image/Email.svg" alt="E-mail"></a>
                         </div>
@@ -265,9 +265,9 @@
 
             <h4>follow me on </h4>
 
-            <a class="social-svg" href="https://www.instagram.com/" target=”_blank”><img src="./assets/image/Instagram.svg" alt="Instagram"></a>
-            <a class="social-svg" href="https://github.com/" target=”_blank”><img src="./assets/image/ithub.svg" alt="github"></a>
-            <a class="social-svg" href="https://linkedin.com" target=”_blank”><img src="./assets/image/Linkedin.svg" alt="Linkedin"></a>
+            <a class="social-svg" href="https://www.instagram.com/0_its_me_mario_0/" target=”_blank”><img src="./assets/image/Instagram.svg" alt="Instagram"></a>
+            <a class="social-svg" href="https://github.com/Skelman016" target=”_blank”><img src="./assets/image/ithub.svg" alt="github"></a>
+            <a class="social-svg" href="https://www.linkedin.com/in/mario-romagnoli-50626a163/" target=”_blank”><img src="./assets/image/Linkedin.svg" alt="Linkedin"></a>
        
         </div>
 
