--- a/portfolio/s2i-copywriting.html
+++ b/portfolio/s2i-copywriting.html
@@ -151,9 +151,9 @@
 
                 <h4>follow me on </h4>
 
-                <a class="social-svg" href="https://www.instagram.com/" target=”_blank”><img src="../assets/image/Instagram.svg" alt="Instagram"></a>
-                <a class="social-svg" href="https://github.com/" target=”_blank”><img src="../assets/image/ithub.svg" alt="github"></a>
-                <a class="social-svg" href="https://linkedin.com" target=”_blank”><img src="../assets/image/Linkedin.svg" alt="Linkedin"></a>
+                <a class="social-svg" href="https://www.instagram.com/0_its_me_mario_0/" target=”_blank”><img src="../assets/image/Instagram.svg" alt="Instagram"></a>
+                <a class="social-svg" href="https://github.com/Skelman016" target=”_blank”><img src="../assets/image/ithub.svg" alt="github"></a>
+                <a class="social-svg" href="https://www.linkedin.com/in/mario-romagnoli-50626a163/" target=”_blank”><img src="../assets/image/Linkedin.svg" alt="Linkedin"></a>
    
             </div>
 
