CSS clean up // HTML Favicon updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Home / Mario Romagnoli - Portfolio</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/image/favicon/favicon.ico">
 
  
    <!-- OG tags -->
